@@ -49,6 +49,7 @@ wxMSW:
 - Fix loading of bitmap with non-pre-multiplied alpha (Artur Wieczorek).
 - Support multiline strings in wxDC::DrawRotatedText() (Artur Wieczorek).
 - Fix stretchable spacers in vertical toolbars (Artur Wieczorek).
+- Add wxEnhMetaFile::Detach() (Luca Bacci).
 
 wxOSX/Cocoa:
 
